--- a/sampleconfig/core.yaml
+++ b/sampleconfig/core.yaml
@@ -651,21 +651,28 @@ ledger:
   blockchain:
 
   state:
-    # stateDatabase - options are "goleveldb", "CouchDB"
+    # stateDatabase - options are "goleveldb", "CouchDB", "Elasticsearch"
     # goleveldb - default state database stored in goleveldb.
     # CouchDB - store state database in CouchDB
-    stateDatabase: goleveldb
+    stateDatabase: Elasticsearch
     # Limit on the number of records to return per query
     totalQueryLimit: 100000
+    elasticsearchConfig:
+      address: 127.0.0.1
+      port: 9200
+      username: elasticUser
+      password: elasticPassword
+      dbName: elasticseachDbName
+
     couchDBConfig:
-       # It is recommended to run CouchDB on the same server as the peer, and
-       # not map the CouchDB container port to a server port in docker-compose.
-       # Otherwise proper security must be provided on the connection between
-       # CouchDB client (on the peer) and server.
-       couchDBAddress: 127.0.0.1:5984
-       # This username must have read and write authority on CouchDB
-       username:
-       # The password is recommended to pass as an environment variable
+      # It is recommended to run CouchDB on the same server as the peer, and
+      # not map the CouchDB container port to a server port in docker-compose.
+      # Otherwise proper security must be provided on the connection between
+      # CouchDB client (on the peer) and server.
+      couchDBAddress: 127.0.0.1:5984
+      # This username must have read and write authority on CouchDB
+      username:
+      # The password is recommended to pass as an environment variable
        # during start up (eg CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD).
        # If it is stored here, the file must be access control protected
        # to prevent unintended users from discovering the password.
